fix: 썸네일 URL 인코딩 문제 해결 위해 ASCII 포맷 적용